取消忽略Release目录
取消忽略Release目录，方便下载使用

--- a/XZW.Logs/XZW.Logs.v2.0.csproj
+++ b/XZW.Logs/XZW.Logs.v2.0.csproj
@@ -50,6 +50,7 @@
     <WarningLevel>4</WarningLevel>
     <DebugType>none</DebugType>
     <ErrorReport>prompt</ErrorReport>
+	<DocumentationFile>XZW.Logs.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
