--- a/XZW.Logs/XZW.Logs.v4.0.csproj
+++ b/XZW.Logs/XZW.Logs.v4.0.csproj
@@ -53,6 +53,7 @@
     <DebugType>none</DebugType>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
+	<DocumentationFile>XZW.Logs.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
