--- a/XZW.Logs/XZW.Logs.v4.5.csproj
+++ b/XZW.Logs/XZW.Logs.v4.5.csproj
@@ -41,7 +41,7 @@
     <ConfigurationOverrideFile>
     </ConfigurationOverrideFile>
     <DefineConstants>TRACE;STRONG;NET;NET_2_0;NET_4_0;NET_4_5</DefineConstants>
-    <DocumentationFile>log4net.xml</DocumentationFile>
+    <DocumentationFile>XZW.Logs.xml</DocumentationFile>
     <DebugSymbols>false</DebugSymbols>
     <FileAlignment>4096</FileAlignment>
     <Optimize>true</Optimize>
